Startet to re-add existing rules. Started with the rule to ensure that a file called readme.adoc exists.

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,13 @@
     </parent>
 
     <artifactId>own-constraints</artifactId>
+    <packaging>pom</packaging>
 
     <inceptionYear>2016</inceptionYear>
 
+    <modules>
+        <module>maven-commmon-constraints</module>
+        <module>project-layout-constraints</module>
+    </modules>
 
 </project>
