Added new rules to detect legal problems.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>maven-commmon-constraints</module>
         <module>project-layout-constraints</module>
+        <module>legal-constraints</module>
     </modules>
 
 </project>
