--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,18 @@
 
     <inceptionYear>2016</inceptionYear>
 
+    <organization>
+        <name>buschmais GbR</name>
+        <url>http://www.buschmais.com</url>
+    </organization>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License, v3</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+        </license>
+    </licenses>
+
     <modules>
         <module>maven-commmon-constraints</module>
         <module>project-layout-constraints</module>
