--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <artifactId>own-constraints</artifactId>
     <packaging>pom</packaging>
+    <version>1.2.0-SNAPSHOT</version>
 
     <name>jQAssistant Own Rules</name>
     <url>http://jqassistant.org/</url>
