--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>own-constraints</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0-RC1</version>
 
     <name>jQAssistant Own Rules</name>
     <url>http://jqassistant.org/</url>
@@ -38,7 +38,8 @@
         <connection>scm:git:git@github.com:buschmais/jqa-own-constraints.git</connection>
         <developerConnection>scm:git:git@github.com:buschmais/jqa-own-constraints.git</developerConnection>
         <url>https://github.com/buschmais/jqa-own-constraints</url>
-    </scm>
+      <tag>1.2.0-RC1</tag>
+  </scm>
 
     <modules>
         <module>maven-commmon-constraints</module>
