--- a/legal-constraints/pom.xml
+++ b/legal-constraints/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>legal-constraints</artifactId>
