--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <version>1.5.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>own-constraints</artifactId>
     <packaging>pom</packaging>
     <version>1.5.0-SNAPSHOT</version>
