--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
+        <version>1.5.0-RC-1</version>
     </parent>
 
     <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>own-constraints</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>1.5.0-RC-1</version>
 
     <name>jQAssistant Own Rules</name>
     <url>http://jqassistant.org/</url>
