--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>1.5.0-RC-1</version>
+        <version>1.5.0-RC-2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>own-constraints</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.0-RC-1</version>
+    <version>1.5.0-RC-2-SNAPSHOT</version>
 
     <name>jQAssistant Own Rules</name>
     <url>http://jqassistant.org/</url>
