added rules regarding registration of XO model types in jQA plugin descriptor

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <module>maven-commmon-constraints</module>
         <module>project-layout-constraints</module>
         <module>legal-constraints</module>
+        <module>plugin-rules</module>
     </modules>
 
     <developers>
