--- a/maven-commmon-constraints/pom.xml
+++ b/maven-commmon-constraints/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>1.7.0-RC1</version>
+        <version>1.7.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.buschmais.jqassistant</groupId>
