[jQAssistant/jqa-own-constraints#7] Added a constraint that checks if the Github Action workflow file for our standard CI process exists

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <module>project-layout-constraints</module>
         <module>legal-constraints</module>
         <module>plugin-rules</module>
+        <module>github-integration</module>
     </modules>
 
     <developers>
