--- a/legal-constraints/pom.xml
+++ b/legal-constraints/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>1.9.0-SNAPSHOT</version>
+        <version>1.9.0-RC1</version>
     </parent>
 
     <artifactId>legal-constraints</artifactId>
