--- a/github-integration/pom.xml
+++ b/github-integration/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>1.10.0-SNAPSHOT</version>
+        <version>1.9.1</version>
     </parent>
 
     <artifactId>github-integration</artifactId>
