--- a/plugin-rules/src/main/resources/META-INF/jqassistant-rules/plugin.xml
+++ b/plugin-rules/src/main/resources/META-INF/jqassistant-rules/plugin.xml
@@ -1,4 +1,6 @@
-<jqa:jqassistant-rules xmlns:jqa="http://www.buschmais.com/jqassistant/core/rule/schema/v1.4">
+<jqassistant-rules xmlns="http://schema.jqassistant.org/rule/v1.10"
+                   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                   xsi:schemaLocation="http://schema.jqassistant.org/rule/v1.10 http://schema.jqassistant.org/rule/jqassistant-rule-v1.10.xsd">
 
     <group id="jqa-plugin:Default">
         <includeConstraint refId="jqa-plugin:UnregisteredLabel"/>
@@ -125,4 +127,4 @@ RETURN  *
     </constraint>
 
 
-</jqa:jqassistant-rules>
+</jqassistant-rules>
