--- a/legal-constraints/pom.xml
+++ b/legal-constraints/pom.xml
@@ -7,6 +7,7 @@
         <version>1.12.0-SNAPSHOT</version>
     </parent>
 
+    <name>jQAssistant Legal Rules</name>
     <artifactId>legal-constraints</artifactId>
 
 
