--- a/maven-commmon-constraints/pom.xml
+++ b/maven-commmon-constraints/pom.xml
@@ -7,6 +7,7 @@
         <version>1.12.0-SNAPSHOT</version>
     </parent>
 
+    <name>jQAssistant Maven Rules</name>
     <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>maven-commmon-constraints</artifactId>
 
