--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1.12.0-SNAPSHOT</version>
 
     <name>jQAssistant Own Rules</name>
-    <url>http://jqassistant.org/</url>
+    <url>https://jqassistant.org/</url>
 
     <inceptionYear>2016</inceptionYear>
 
