--- a/project-layout-constraints/pom.xml
+++ b/project-layout-constraints/pom.xml
@@ -7,6 +7,7 @@
         <version>1.12.0-SNAPSHOT</version>
     </parent>
 
+    <name>jQAssistant Project Layout Constraints</name>
     <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>project-layout-constraints</artifactId>
 
