--- a/legal-constraints/pom.xml
+++ b/legal-constraints/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-M4</version>
     </parent>
 
     <name>jQAssistant Legal Rules</name>
