--- a/plugin-rules/pom.xml
+++ b/plugin-rules/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>2.1.0-M1</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <name>jQAssistant Plugin Rules</name>
