--- a/maven-commmon-constraints/pom.xml
+++ b/maven-commmon-constraints/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>2.2.0</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
 
     <name>jQAssistant Maven Rules</name>
