--- a/project-layout-constraints/pom.xml
+++ b/project-layout-constraints/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>own-constraints</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-RC1</version>
     </parent>
 
     <name>jQAssistant Project Layout Constraints</name>
